Gap Fix on Register

--- a/Group1-Expense_Tracker/wwwroot/css/site.output.css
+++ b/Group1-Expense_Tracker/wwwroot/css/site.output.css
@@ -658,6 +658,14 @@ video {
   gap: 1.5rem;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-0\.5 {
+  gap: 0.125rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -811,6 +819,10 @@ video {
     width: 66.666667%;
   }
 
+  .sm\:gap-2 {
+    gap: 0.5rem;
+  }
+
   .sm\:rounded-xl {
     border-radius: 0.75rem;
   }
@@ -823,6 +835,10 @@ video {
 
   .md\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .md\:gap-3 {
+    gap: 0.75rem;
   }
 
   .md\:rounded-xl {
